--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -1,11 +1,17 @@
 {
-  "lostPassword" : "Reset your password",
+  "passwordReset": "Check your email and follow instruction to reset your password.",
+  "canNotResetPassword": "Sorry, we can't reset your password, check your email or contact technical support",
+  "lostPassword" : "Lost your password ?",
+  "authenticationFailed": "Authentication failed, please check your email or password",
+  "tryLeftBeforeBlock" : "{{count}} attempt before your account is locked for 15 minutes",
+  "tryLeftBeforeBlock_plural" : "{{count}} attempts before your account is locked for 15 minutes",
+  "blockDuration" : "Your account is blocked during {{duration}}",
   "button" : {
-    "login" : "Login"
+    "login" : "Login",
+    "back": "Back"
   },
   "field" : {
     "email" : "Email",
-    "password" : "Password",
-    "secret" : "Root Secret"
+    "password" : "Password"
   }
 }
