Add validator for password, translate validator rules Add profile Add Team section with listing Refactoring and clean code.

--- a/src/i18n/en/users.json
+++ b/src/i18n/en/users.json
@@ -1,6 +1,7 @@
 {
   "listing" : {
     "column" : {
+      "id" : "UUID",
       "lastname" : "Last Name",
       "firstname" : "First Name"
     }
