Refactor profil dialog box Update global themes.js

--- a/src/i18n/en/profile.json
+++ b/src/i18n/en/profile.json
@@ -1,5 +1,5 @@
 {
-  "dialogTitle": "Your profile",
+  "dialogTitle": "Profile",
   "changeYourPassword": "Change password",
   "field" : {
     "lastName": "Last name",
@@ -10,6 +10,7 @@
     "confirmPassword" : "Confirm password"
   },
   "button" : {
+    "reset": "Reset",
     "cancel": "Cancel",
     "update": "Update"
   }
