Update message when we try to create a team that already exist Clean code

--- a/src/i18n/en/teams.json
+++ b/src/i18n/en/teams.json
@@ -1,6 +1,12 @@
 {
+  "dialogCreate": "New team",
   "button": {
-    "addTeam": "Add a new team"
+    "addTeam": "Add a new team",
+    "add": "Add",
+    "cancel": "Cancel"
+  },
+  "field": {
+    "name": "Name"
   },
   "listing" : {
     "column" : {
