--- a/src/i18n/en/errors.json
+++ b/src/i18n/en/errors.json
@@ -7,5 +7,7 @@
     "password": "8 to 10 characters with at least 1 number, 1 uppercase, 1 lowercase, 1 special character",
     "greaterThan" : "Should be greater than {{min}}",
     "lowerThan" : "Should be greater than {{max}}"
-  }
+  },
+  "unknownError": "Sorry a error happen, contact technical support",
+  "teamDuplicate": "Sorry, this team name already exist"
 }
