Refactor code, Add page used to reset Password Add method used to send email reset password.

--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -8,10 +8,13 @@
   "blockDuration" : "Your account is blocked during {{duration}}",
   "button" : {
     "login" : "Login",
-    "back": "Back"
+    "back": "Back",
+    "resetPassword": "Reset password",
+    "confirm": "Confirm"
   },
   "field" : {
     "email" : "Email",
-    "password" : "Password"
+    "password" : "Password",
+    "confirmPassword" : "Confirm Password"
   }
 }
