Add error message if email isn't recognized, show message for email instruction

--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -5,6 +5,7 @@
   "authenticationFailed": "Authentication failed, please check your email or password",
   "tryLeftBeforeBlock" : "{{count}} attempt before your account is locked for 15 minutes",
   "tryLeftBeforeBlock_plural" : "{{count}} attempts before your account is locked for 15 minutes",
+  "followInstructionInEmail": "Watch your email and follow instructions",
   "blockDuration" : "Your account is blocked during {{duration}}",
   "button" : {
     "login" : "Login",
