--- a/src/i18n/en/errors.json
+++ b/src/i18n/en/errors.json
@@ -10,5 +10,6 @@
   },
   "unknownError": "Sorry a error happen, contact technical support",
   "teamDuplicate": "Sorry, this team name already exist",
-  "passwordDoesntMatch": "The current password isn't correct."
+  "passwordDoesntMatch": "The current password isn't correct.",
+  "resetPasswordUserNotExist": "This email isn't recognized"
 }
