Add new error rendering Check if token is still valid

--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -1,11 +1,10 @@
 {
-  "passwordReset": "Check your email and follow instruction to reset your password.",
   "canNotResetPassword": "Sorry, we can't reset your password, check your email or contact technical support",
   "lostPassword" : "Lost your password ?",
   "authenticationFailed": "Authentication failed, please check your email or password",
   "tryLeftBeforeBlock" : "{{count}} attempt before your account is locked for 15 minutes",
   "tryLeftBeforeBlock_plural" : "{{count}} attempts before your account is locked for 15 minutes",
-  "followInstructionInEmail": "Watch your email and follow instructions",
+  "followInstructionInEmail": "Check your email and follow instruction to reset your password.",
   "blockDuration" : "Your account is blocked during {{duration}}",
   "button" : {
     "login" : "Login",
@@ -15,6 +14,7 @@
   },
   "field" : {
     "email" : "Email",
+    "newPassword" : "New password",
     "password" : "Password",
     "confirmPassword" : "Confirm Password"
   }
