Update error message.

--- a/src/i18n/en/auth.json
+++ b/src/i18n/en/auth.json
@@ -1,4 +1,5 @@
 {
+  "congratsPasswordReset": "Congrats, your password was changed",
   "canNotResetPassword": "Sorry, we can't reset your password, check your email or contact technical support",
   "lostPassword" : "Lost your password ?",
   "authenticationFailed": "Authentication failed, please check your email or password",
