Fix column name

--- a/src/i18n/en/tokens.json
+++ b/src/i18n/en/tokens.json
@@ -3,7 +3,7 @@
     "column" : {
       "id" : "UUID",
       "expiredAt" : "Expire at",
-      "type" : "type"
+      "type" : "Type"
     }
   }
 }
