Update user listing with isAdmin field (checkCellRendering)

--- a/src/i18n/en/users.json
+++ b/src/i18n/en/users.json
@@ -3,7 +3,8 @@
     "column" : {
       "id" : "UUID",
       "lastname" : "Last Name",
-      "firstname" : "First Name"
+      "firstname" : "First Name",
+      "isAdmin": "Is Admin"
     }
   }
 }
